    constructors.

  * finagle-core: Aperture can no longer be enabled via command line flags. Configuring
    per-client settings globally is generally not a good idea and we're working to remove
    these flags from Finagle. Use the constructors in `com.twitter.finagle.loadbalancer.Balancers`
    to create an instance that can be injected into a client.

  * finagle-exception: `com.twitter.finagle.exception.ExceptionReporter` is no longer used
    as the default `com.twitter.finagle.util.ReporterFactory`.

  * finagle-kestrel: Replace deprecated finagle-kestrel package with finagle-kestrelx.

New Features
~~~~~~~~~~~~
  * finagle-httpx: Support nacks between Finagle Http clients and servers. When a server fails 
    with retryable exceptions (exceptions wrapped by `Failure.rejected`), it sends back a "Nack" 
    response, i.e. 503 Response code with a new "finagle-http-nack" header. This allows clients 
    to safely retry failed requests, and keep connections open.


6.25.0
------

Breaking API Changes
~~~~~~~~~~~~~~~~~~~~

  * finagle-core: `c.t.f.builder.Server` now implements `c.t.f.ListeningServer`.

  * finagle-core: `c.t.f.Server.serveAndAnnounce` with a `ServiceFactory` had
    its first argument renamed to `name` from `forum`.

  * finagle-core: Add an attribute map to `c.t.f.Addr.Bound`.

  * finagle-core: `c.t.f.builder.ClientConfig.FailFast` has moved to
    `c.t.f.FailFastFactory.FailFast`.

  * finagle-core: NoBrokersAvailableException now has two Dtab constructor
    arguments, both the base and local Dtabs.

  * finagle-core: `c.t.f.Failure` convenience constructors (e.g., `Failure.Cause`,
    `Failure.Rejected`) were removed in favor of uniform flag treatment, and clean
    separation of attributes from interpretation of those attributes.

  * finagle-core: `ExitGuard` usage is now private to finagle.

  * finagle-core: `c.t.f.service.TimeoutFilter.module` is now split into
    `TimeoutFilter.clientModule` and `TimeoutFilter.serverModule`.
