@@ -192,9 +192,6 @@ private[finagle] class FailFastFactory[Req, Rep](
     case r: Retrying => r.status
   }
 
-  // TODO(CSL-1336): Finalize isAvailable
-  override def isAvailable = status == Status.Open
-
   override val toString = "fail_fast_%s".format(self.toString)
 
   override def close(deadline: Time) = {
