@@ -48,10 +48,6 @@ class ValidateThriftService(
     if (!isValid) Status.Closed 
     else self.status
   
-  
-  // TODO(CSL-1336): Finalize isAvailable
-  override def isAvailable = status == Status.Open
-
   private def isResponseValid(bytes: Array[Byte]) = try {
     val memoryTransport = new TMemoryInputTransport(bytes)
     val iprot = protocolFactory.getProtocol(memoryTransport)
