@@ -25,6 +25,9 @@ Breaking API Changes
     these flags from Finagle. Use the constructors in `com.twitter.finagle.loadbalancer.Balancers`
     to create an instance that can be injected into a client.
 
+  * finagle-core: `Service.isAvailable` and `ServiceFactory.isAvailable` is finalized.
+    `Service.status` and `ServiceFactory.status` supersedes `isAvailable` usage since 6.24.0 release.
+
   * finagle-exception: `com.twitter.finagle.exception.ExceptionReporter` is no longer used
     as the default `com.twitter.finagle.util.ReporterFactory`.
 
